# resources

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.claude/agents/: socratic.md
.claude/skills/socratic/: SKILL.md
.claude/skills/socratic/scripts/: socratic-transcript.py
.claude/skills/socratic/templates/: socratic-output.json  socratic-output.md
.claude/skills/spec/: SKILL.md  sdd-lifecycle.md
.claude/skills/spec/references/: analysis-rules.md  defaults.yaml  frontmatter-schema.md  lifecycle-model.md  quality-checklist.md
.claude/skills/spec/scripts/: load-defaults.sh
.claude/skills/spec/templates/: plan.md  socratic-output.md  spec.md  synthesis.md  tasks.md
.github/workflows/: mkdocs-deploy.yml
database/: __init__.py  models.py
docs/: _config.yml  _toc.yml  a.py  concept.md  future.md  intro.md
docs/_build/.doctrees/: concept.doctree  end_to_end_flow.doctree  environment.pickle  flow.doctree  intro.doctree  propagator_types.doctree  temp.doctree
docs/_build/html/: .buildinfo  concept.html  end_to_end_flow.html  flow.html  genindex.html  intro.html  objects.inv  propagator_types.html  search.html  searchindex.js  temp.html
docs/_build/html/_downloads/bcd84ad6c936b06f226d4b1b1611d809/: collector-config.yaml
docs/_build/html/_sources/: end_to_end_flow.md  flow.md  propagator_types.md  temp.md
infrastructure/database/: config.py
infrastructure/redis/: base.py  cluster.py  config.py  standalone.py
playbook/: _config.yml  cb.md  references.bib  retry.md
playground/: dlq_demo.py
prompts/: database-expert.md  observability-expert.md  prod-readiness.md  pytest-expert.md  technical-writer.md  tmp.md
redis/: __init__.py  base.py  client.py  cluster.py  config.py  standalone.py
resilience/: config.py  retry.py
resources/: __init__.py  logger.py
resources/core/: __init__.py  enums.py  types.py
resources/database/: models.py  pool.py
resources/dlq/: __init__.py  config.py  domain.py  service.py
resources/infrastructure/database/: models.py  pool.py
resources/infrastructure/postgres/: __init__.py  cluster.py  config.py  enums.py  exceptions.py  health.py  pool.py
resources/infrastructure/redis/: base.py  cluster.py  factory.py  standalone.py
resources/redis/: __init__.py
resources/resilience/: retry.py  types.py
tests/: __init__.py
tests/integration/: conftest.py
tests/integration/database/: conftest.py  test_connection_failure_recovery.py  test_cursor_operations.py  test_health_check_stress.py  test_integration_database.py  test_pool_exhaustion.py  test_pool_lifecycle.py  test_pool_size_dynamics.py  test_query_timeout.py  test_transaction_conflicts.py  test_transaction_isolation.py
tests/integration/postgres/: conftest.py  replication_fixtures.py  test_asyncpg_pool.py  test_cursor_operations.py  test_database_cluster_replication.py  test_pool_stress.py  test_postgres_acid_compliance.py  test_query_timeout.py  test_transaction_conflicts.py
tests/integration/redis/: __init__.py  test_redis_standalone.py
tests/unit/database/: test_config.py
tests/unit/dlq/: __init__.py  test_config.py  test_domain.py  test_service.py
tests/unit/resilience/: test_retry.py
