[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixiu"
version = "1.0.0"
description = "A collection of code for pixiu - unified interfaces for LLM providers."
authors = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
maintainers = [{name="GAO Hongnan", email="hongnangao@gmail.com"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
keywords = [
    "llm",
    "adapters",
    "ai",
    "openai",
    "anthropic",
    "google",
    "gemini",
    "structured-output",
    "pydantic",
    "instructor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "asyncpg>=0.30.0",
    "asyncpg-stubs>=0.30.2",
    "logfire>=4.14.2",
    "matplotlib>=3.10.7",
    "memray>=1.19.1",
    "objgraph>=3.6.2",
    "omniadapters>=19.0.0",
    "pandas>=2.3.3",
    "profilist>=6.0.0",
    "psutil>=7.1.0",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pympler>=1.1",
    "redis>=7.1.0",
    "rich>=14.1.0",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]


[dependency-groups]
lint = [
    "bandit~=1.8.6",
    "commitizen~=4.8.3",
    "pre-commit~=4.3.0",
    "ruff~=0.12.11",
    "yamllint==1.37.1",
]

type = [
    "mypy~=1.17.1",
    "pyright~=1.1.405",
    "typeguard~=4.4.4",
    "types-pyyaml~=6.0.12.20250516",
    "types-psutil~=7.0.0.20250822",
    "types-aiofiles~=24.1.0.20250822",
    "types-python-jose>=3.3.4",
]

test = [
    "coverage~=7.10.6",
    "pytest~=8.4.1",
    "pytest-asyncio~=1.1.0",
    "pytest-benchmark~=5.1.0",
    "pytest-memray>=1.8.0",
    "pytest-mock~=3.14.1",
    "pytest-xdist~=3.6.1",
    "pytest-cov~=6.0.0",
    "testcontainers>=4.0",
]

docs = [
    "jupyter-book==1.0.4.post1",
    "colorama~=0.4.6",
    "ghp-import~=2.1.0",
    "jupytext~=1.15.2",
    "sphinxcontrib-mermaid~=1.0.0",
    "sphinx-inline-tabs==2023.4.21",
    "sphinx-proof==0.2.0",
    "sphinx-sitemap==2.5.1",
    "sphinxcontrib-bibtex",
    "sphinx-autobuild",
]

profile = [
    "locust~=2.41.3",
    "memray>=1.18.0",
    "scalene>=1.5.55",
    "yappi~=1.6.3",
]

dev = [
    { include-group = "lint" },
    { include-group = "type" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "profile" },
]

[project.scripts]
tc = "pixiu.cli.main:cli"

[project.urls]
Homepage = "https://github.com/gao-hongnan/pixiu"
Documentation = "https://github.com/gao-hongnan/pixiu/tree/main/playbook"
Repository = "https://github.com/gao-hongnan/pixiu"
Issues = "https://github.com/gao-hongnan/pixiu/issues"
Changelog = "https://github.com/gao-hongnan/pixiu/releases"

[tool.hatch.build.targets.wheel]
packages = ["pixiu"]
exclude = [
    "pixiu/cli/",
    "tests/",
    "docs/",
    "playbook/",
    "playground/",
    "examples/",
    "scripts/",
    "*.pyc",
    "__pycache__/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".coverage",
    "htmlcov/",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "docs/",
    "playbook/",
    "playground/",
    "examples/",
    "scripts/",
    "*.pyc",
    "__pycache__/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    ".git/",
    ".github/",
    ".venv/",
    "dist/",
    "build/",
    ".coverage",
    "htmlcov/",
    ".DS_Store",
]

[tool.uv]
managed = true

[tool.bandit]
exclude_dirs = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    "venv_*",
    "venv",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--memray",
    "--memray-bin-path=.memray",
    "--most-allocations=10",
    "--trace-python-allocators",
    "--strict-markers",
    "--tb=short",
    "--cov=pixiu",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "memory: marks tests that check memory usage",
    "benchmark: marks performance benchmark tests",
    "database: marks tests as database-related tests",
]
